--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>   
 Body {  
   font-family: Calibri, Helvetica, sans-serif;  
-  background-color: pink;  
+  background-color: grey;  
 }  
 button {   
        background-color: #4CAF50;   
@@ -85,7 +85,7 @@ function login()
             <input type="text" placeholder="Enter Username" name="username" id="username" required>  
             <label>Password : </label>   
             <input type="password" placeholder="Enter Password" name="password" id="password" required>  
-            <button type="submit" onClick="login()">Login</button>   
+            <button type="submit" onClick="login()">Login</button> <br>  
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
             Forgot <a href="#"> password? </a>   
