--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <style>   
 Body {  
   font-family: Calibri, Helvetica, sans-serif;  
-  background-color: grey;  
+  background-color: lightgrey;  
 }  
 button {   
-       background-color: #4CAF50;   
-       width: 40%;  
+       background-color: #abadb0;   
+       width: 30%;  
         color: black;   
         padding: 15px;   
         margin: 10px 0px;   
-        border: none;   
+        border: 2px solid black;   
         cursor: pointer;   
          }   
  form {   
@@ -28,7 +28,7 @@ button {
         margin: 8px 0;  
         padding: 12px 20px;   
         display: inline-block;   
-        border: 2px solid green;   
+        border: 2px solid black;   
         box-sizing: border-box;   
     }  
  button:hover {   
@@ -43,7 +43,7 @@ button {
      
  .container {   
         padding: 25px;   
-        background-color: lightblue;  
+        background-color: lavender;  
     }   
 </style>  
 </head>
@@ -78,7 +78,7 @@ function login()
 	}
 </script>
 <body>    
-    <center> <h1> Student Login Form </h1> </center>   
+    <center> <h2> Login Form </h2> </center>   
     <form>  
         <div class="container">   
             <label>Username : </label>   
