--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ button {
         margin: 8px 0;  
         padding: 12px 20px;   
         display: inline-block;   
-        border: 1px solid black;   
+        border: 2px solid black;   
         box-sizing: border-box;   
     }  
  button:hover {   
@@ -82,7 +82,7 @@ function login()
     <form>  
         <div class="container">   
             <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" id="username" required>  
+            <input type="text" placeholder="Enter Username" name="username" id="username" required> <br> 
             <label>Password : </label>   
             <input type="password" placeholder="Enter Password" name="password" id="password" required>  
             <button type="submit" onClick="login()">Login</button> <br>  
