--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ function login()
             <label>Username : </label>   
             <input type="text" placeholder="Enter Username" name="username" id="username" required> <br> 
             <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" id="password" required>  
+            <input type="password" placeholder="Enter Password" name="password" id="password" required> <br> 
             <button type="submit" onClick="login()">Login</button> <br>  
-            <input type="checkbox" checked="checked"> Remember me   
+            <input type="checkbox" checked="checked"> Keep me signed in   
             <button type="button" class="cancelbtn"> Cancel</button>   
             Forgot <a href="#"> password? </a>   
         </div>   
