--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ button {
         margin: 10px 0px;   
         border: 2px solid black;   
         cursor: pointer;   
+	float: left;
          }   
  form {   
         border: 3px solid #f1f1f1;   
@@ -29,7 +30,8 @@ button {
         padding: 12px 20px;   
         display: inline-block;   
         border: 2px solid black;   
-        box-sizing: border-box;   
+        box-sizing: border-box;  
+	float: left;
     }  
  button:hover {   
         opacity: 0.7;   
