--- a/server.html
+++ b/server.html
@@ -51,7 +51,7 @@ button {
 </head>
 
 <body>    
-    <center> <h2> Login Successful! </h2> </center>   
+    <center> <h2> Login Successful!! </h2> </center>   
     
 </body> 
 
