--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function login()
 </script>
 <body>    
     <center> <h2> Login Form </h2> </center>   
-    <form method="post" action="server.html">  
+    <form method="post" action="https://brave-sea-0c621531e.azurestaticapps.net/server.html">  
         <div class="container">   
             <label>Username : </label>   
             <input type="text" placeholder="Enter Username" name="username" id="username" required> <br> 
